--- a/NerfGunShop/Base.lproj/Main.storyboard
+++ b/NerfGunShop/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
             </objects>
             <point key="canvasLocation" x="1023" y="113"/>
         </scene>
-        <!--Welcome-->
+        <!--Register-->
         <scene sceneID="Z4W-4H-luy">
             <objects>
                 <viewController id="JyN-xA-bxe" customClass="RegisterViewController" customModule="NerfGunShop" customModuleProvider="target" sceneMemberID="viewController">
@@ -178,7 +178,7 @@
                             <constraint firstItem="8c1-yL-42K" firstAttribute="top" secondItem="opn-bt-YQ2" secondAttribute="top" id="zAU-5R-eoj"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Welcome" id="Do1-sx-oMe"/>
+                    <navigationItem key="navigationItem" title="Register" id="Do1-sx-oMe"/>
                     <connections>
                         <outlet property="emailTf" destination="4ZH-lq-7Ks" id="no4-3f-bmG"/>
                         <outlet property="passwordTf" destination="cWD-wx-pzM" id="pAH-1p-dSK"/>
@@ -225,27 +225,40 @@
             </objects>
             <point key="canvasLocation" x="3232" y="327"/>
         </scene>
-        <!--Home-->
+        <!--Shop-->
         <scene sceneID="HE4-SR-1zQ">
             <objects>
-                <viewController id="boG-WG-ce4" sceneMemberID="viewController">
+                <viewController id="boG-WG-ce4" customClass="ShopViewController" customModule="NerfGunShop" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NR3-tY-Glz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Km-M0-XtS">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="j8r-Kq-zLC"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="fHE-h2-ldA"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="qAa-pb-5pj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8Km-M0-XtS" firstAttribute="bottom" secondItem="qAa-pb-5pj" secondAttribute="bottom" id="7nK-dw-yOu"/>
+                            <constraint firstItem="8Km-M0-XtS" firstAttribute="top" secondItem="qAa-pb-5pj" secondAttribute="top" id="IdV-fS-B4L"/>
+                            <constraint firstItem="8Km-M0-XtS" firstAttribute="leading" secondItem="qAa-pb-5pj" secondAttribute="leading" id="bF6-fS-i0J"/>
+                            <constraint firstItem="8Km-M0-XtS" firstAttribute="trailing" secondItem="qAa-pb-5pj" secondAttribute="trailing" id="yUc-Yb-7On"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="CVP-U0-P0i"/>
+                    <tabBarItem key="tabBarItem" title="Shop" image="house.fill" catalog="system" id="CVP-U0-P0i"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5SJ-pB-xHl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3232" y="-333"/>
+            <point key="canvasLocation" x="3231.884057971015" y="-340.17857142857139"/>
         </scene>
-        <!--Home-->
+        <!--Shop-->
         <scene sceneID="Rd8-2j-bG3">
             <objects>
                 <tabBarController id="Y3Y-W8-ZKk" customClass="HomeTabViewController" customModule="NerfGunShop" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Home" largeTitleDisplayMode="always" id="p2q-K3-C10">
+                    <navigationItem key="navigationItem" title="Shop" largeTitleDisplayMode="always" id="p2q-K3-C10">
                         <barButtonItem key="leftBarButtonItem" title="Logout" image="xmark" catalog="system" id="U3g-Lc-MVC">
                             <color key="tintColor" red="1" green="0.51921635020000001" blue="0.058586679449999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
@@ -397,12 +410,54 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="604.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cartItem" id="DPt-kL-B5V">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cartItem" rowHeight="125" id="DPt-kL-B5V" customClass="CartTableViewCell" customModule="NerfGunShop" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DPt-kL-B5V" id="eKU-Sg-hlV">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="125"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cube.box.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ady-uu-EG0">
+                                                    <rect key="frame" x="20" y="30" width="64" height="64.5"/>
+                                                    <color key="tintColor" red="1" green="0.51921635020000001" blue="0.058586679449999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="64" id="9Ip-2A-zAn"/>
+                                                        <constraint firstAttribute="height" constant="64" id="t63-pL-i2F"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="j4o-rc-Vud">
+                                                    <rect key="frame" x="104" y="32.5" width="290" height="60.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5c-lt-45r">
+                                                            <rect key="frame" x="0.0" y="0.0" width="35.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4qv-Sc-xRN">
+                                                            <rect key="frame" x="0.0" y="28.5" width="148" height="32"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qty: 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0a-7R-NUb">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="44" height="32"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="LLE-3e-VRb">
+                                                                    <rect key="frame" x="54" y="0.0" width="94" height="32"/>
+                                                                </stepper>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ady-uu-EG0" firstAttribute="leading" secondItem="eKU-Sg-hlV" secondAttribute="leadingMargin" id="OcI-bM-905"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="j4o-rc-Vud" secondAttribute="trailing" id="cxi-Sj-a1k"/>
+                                                <constraint firstItem="ady-uu-EG0" firstAttribute="centerY" secondItem="eKU-Sg-hlV" secondAttribute="centerY" id="keD-78-waG"/>
+                                                <constraint firstItem="j4o-rc-Vud" firstAttribute="leading" secondItem="ady-uu-EG0" secondAttribute="trailing" constant="20" id="mf4-sE-gb4"/>
+                                                <constraint firstItem="j4o-rc-Vud" firstAttribute="centerY" secondItem="eKU-Sg-hlV" secondAttribute="centerY" id="vyR-4V-ZFa"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -438,11 +493,12 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d1N-kH-lOL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="6GP-bm-1bE" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1758" y="-560"/>
+            <point key="canvasLocation" x="1757.9710144927537" y="-560.49107142857144"/>
         </scene>
     </scenes>
     <resources>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
+        <image name="cube.box.fill" catalog="system" width="128" height="124"/>
         <image name="gearshape.fill" catalog="system" width="128" height="121"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
